# gRPC-Communication

./: .gitignore  CMakeLists.txt  Nexabytes Mini 2 PPT.pptx  README.md  ipv6_client.py  test_cpp_server.cpp  test_server.py
config/: network_config.json
data/process_e/: other_crashes.csv
proto/: data_service.proto
python_client/: client.py  crash_client.py  fatalities_client.py  time_query_client.py  timing_client.py
scripts/: build.sh  generate_python_proto.sh  generate_python_proto_fixed.sh  prepare_data.py  run_client.sh  run_process_a.sh  run_process_b.sh  run_process_c.sh  run_process_d.sh  run_process_e.sh  setup_mac.sh
src/common/: CMakeLists.txt  shared_memory.cpp
src/common/config/: config_loader.cpp  config_loader.h
src/common/data/: data_structures.cpp  data_structures.h
src/common/grpc/: data_service.cpp  data_service.h
src/common/shared_memory/: shared_memory.cpp  shared_memory.h
src/common/timing/: timing.cpp  timing.h
src/process_a/: CMakeLists.txt  process_a.cpp
src/process_b/: CMakeLists.txt  process_b.cpp
src/process_c/: CMakeLists.txt  process_c.cpp
src/process_d/: CMakeLists.txt  process_d.cpp
src/process_e/: CMakeLists.txt  process_e.cpp
